small source code update

--- a/application/modules/default/views/scripts/explore/partials/product.phtml
+++ b/application/modules/default/views/scripts/explore/partials/product.phtml
@@ -48,7 +48,8 @@ $helperImage = new Default_View_Helper_Image();
        
         <b style="display: block; margin-bottom: 5px"><?php echo $helperFetchSubcategoriesForProduct->fetchCategoriesForProductAsString($this->product->project_id) ?></b>
          <?php 
-                $type = $this->FetchProjectFileTypes($this->product->project_id);                                          
+          $helperFileTypes = new Default_View_Helper_FetchProjectFileTypes();
+          $type = $helperFileTypes->FetchProjectFileTypes($this->product->project_id);
           if(!empty($type)){
             ?>
         <span class="filetypeos" ><?=$type ?></span>
