--- a/application/modules/default/views/scripts/product/partials/details.phtml
+++ b/application/modules/default/views/scripts/product/partials/details.phtml
@@ -65,14 +65,14 @@
 
                                      <div class="row">
                                       <span class=" col-lg-5" > 
-                                      filetype_os
+                                      package type
                                       </span>
                                       <span class="col-lg-7 value ">
                                       <?php 
                                             $type = $this->FetchProjectFileTypes($this->product->project_id);                                          
                                       if(!empty($type)){
                                         ?>
-                                      <span class="filetypeos"> <?= $this->FetchProjectFileTypes($this->product->project_id) ?></span>
+                                      <?= $this->FetchProjectFileTypes($this->product->project_id) ?>
                                       <?php 
                                       }?>
                                       </span>
