package type style fix

--- a/httpdocs/theme/flatui/css/style.css
+++ b/httpdocs/theme/flatui/css/style.css
@@ -1006,5 +1006,6 @@ span.filetypeos
   vertical-align: baseline;
   border-radius: .25em;
   font-size: smaller;
-  
+  float: left;
+  margin: 2px;
 }
