--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -145,6 +145,7 @@ $this->inlineScript()->appendScript(
                             <th><?= $this->translate('Description') ?></th>
                             <th><?= $this->translate('License') ?></th>
                             <th><?= $this->translate('Filetype') ?></th>
+                            <th><?= $this->translate('Packagetype') ?></th>
                             <th><?= $this->translate('Date added') ?></th>
                             <th style="text-align: right"><?= $this->translate('Filesize') ?></th>
                             <th style="text-align: right"><?= $this->translate('# of Downloads') ?></th>
@@ -458,7 +459,7 @@ $this->inlineScript()->appendScript(
                             + '<option value=\"1000\"></option><option value=\"16\">AGPL</option><option value=\"3\">Artistic 2.0</option><option value=\"6\">BSD</option><option value=\"9\">CPL 1.0</option><option value=\"10\">Creative Commons by</option><option value=\"13\">Creative Commons by-nc</option><option value=\"15\">Creative Commons by-nc-nd</option><option value=\"14\">Creative Commons by-nc-sa</option><option value=\"12\">Creative Commons by-nd</option><option value=\"11\">Creative Commons by-sa</option><option value=\"8\">GFDL</option><option value=\"1\">GPL</option><option value=\"2\">LGPL</option><option value=\"0\">Other</option><option value=\"7\">Proprietary License</option><option value=\"5\">QPL</option><option value=\"4\">X11</option>'
                             + '</select><span id="file-tag-license'+this.id+'"><span id="file-tag-license-text'+this.id+'">'
                             + '</td>'
-                            //+ '<td>' + this.type + '</td>'
+                            + '<td>' + this.type + '</td>'
                             + '<td>'
                             + '<select id="data-select-filetype' + this.id + '" data-filetype-id=" name="filetype" class="form-control input-sm" style="width: 200px;">'
                             + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
@@ -747,8 +748,7 @@ $this->inlineScript()->appendScript(
                         + '<option value=\"1000\"></option><option value=\"16\">AGPL</option><option value=\"3\">Artistic 2.0</option><option value=\"6\">BSD</option><option value=\"9\">CPL 1.0</option><option value=\"10\">Creative Commons by</option><option value=\"13\">Creative Commons by-nc</option><option value=\"15\">Creative Commons by-nc-nd</option><option value=\"14\">Creative Commons by-nc-sa</option><option value=\"12\">Creative Commons by-nd</option><option value=\"11\">Creative Commons by-sa</option><option value=\"8\">GFDL</option><option value=\"1\">GPL</option><option value=\"2\">LGPL</option><option value=\"0\">Other</option><option value=\"7\">Proprietary License</option><option value=\"5\">QPL</option><option value=\"4\">X11</option>'
                         + '</select>'
                         + '</td>'
-                        //+ '<td>' + data.file.type + '</td>'
-                        //+ '<td>' + this.type + '</td>'
+                        + '<td>' + data.file.type + '</td>'
                         + '<td>'
                         + '<select id="data-select-filetype' + data.file.id + '" data-filetype-id=" name="filetype" class="form-control input-sm" style="width: 200px;">'
                         + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
