--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -74,7 +74,7 @@
                                  <th><?= $this->translate('Filename'); ?></th>
                                   <th><?= $this->translate('Version'); ?></th>
                                  <th><?= $this->translate('Description'); ?></th>
-                                 <th><?= $this->translate('Fileetype'); ?></th>
+                                 <th><?= $this->translate('Filetype'); ?></th>
                                  <th><?= $this->translate('Packagetype'); ?></th>
                                  <th><?= $this->translate('License'); ?></th>
                                  <th><?= $this->translate('Downloads'); ?></th>
@@ -235,7 +235,7 @@
                                                   osId = tagStr[1];
                                               } else if (tagStr.length == 2 && tagStr[0] == 'licensetype') {
                                                   licenseId = tagStr[1];
-                                              } else if (tagStr.length == 2 && tagStr[0] == 'filetypetype') {
+                                              } else if (tagStr.length == 2 && tagStr[0] == 'filetypeid') {
                                                   filetypeId = tagStr[1];
                                               }
                                              } else {
