--- a/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
@@ -115,7 +115,7 @@ $helperDonationListSource = new Default_View_Helper_ExternalDonationListSource()
                    data-product-version="<?= $this->version ?>"
                    data-addpploadfile-uri="<?= $helperBuildProductUrl->buildProductUrl($this->project_id, 'addpploadfile') ?>"
                    data-updatepploadfile-uri="<?= $helperBuildProductUrl->buildProductUrl($this->project_id, 'updatepploadfile') ?>"
-                   data-updatefiletype-uri="<?= $helperBuildProductUrl->buildProductUrl($this->project_id, 'updatefiletype') ?>"
+                   data-updatepackagetype-uri="<?= $helperBuildProductUrl->buildProductUrl($this->project_id, 'updatepackagetype') ?>"
                    data-deletepploadfile-uri="<?= $helperBuildProductUrl->buildProductUrl($this->project_id, 'deletepploadfile') ?>"
                    data-deletepploadfiles-uri="<?= $helperBuildProductUrl->buildProductUrl($this->project_id, 'deletepploadfiles') ?>"
                    data-finalizepploadcollection-uri="<?= $helperBuildProductUrl->buildProductUrl($this->project_id,
