--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -264,7 +264,7 @@ $helperImage = new Default_View_Helper_Image();
                                      data-ppload-collection-id="<?= $this->ppload_collection_id ?>" data-product-id=""
                                      data-addpploadfile-uri="<?= $this->buildProductUrl('{project_id}', 'addpploadfile') ?>"
                                      data-updatepploadfile-uri="<?= $this->buildProductUrl('{project_id}', 'updatepploadfile') ?>"
-                                     data-updatefiletype-uri="<?= $this->buildProductUrl('{project_id}', 'updatefiletype') ?>"
+                                     data-updatepackagetype-uri="<?= $this->buildProductUrl('{project_id}', 'updatepackagetype') ?>"
                                      data-deletepploadfile-uri="<?= $this->buildProductUrl('{project_id}', 'deletepploadfile') ?>"
                                      data-deletepploadfiles-uri="<?= $this->buildProductUrl('{project_id}', 'deletepploadfiles') ?>"
                                      data-finalizepploadcollection-uri="<?= $this->buildProductUrl('{project_id}', 'finalizepploadcollection') ?>">
@@ -524,7 +524,7 @@ $helperImage = new Default_View_Helper_Image();
                                                         var licensetype = null;
                                                         var license = '';
                                                         var licenseId = '';
-														var filetypeId = '';
+							var packagetypeId = '';
 
 
                                                         //var packageId = null;
@@ -539,8 +539,8 @@ $helperImage = new Default_View_Helper_Image();
                                                                         osId = tagStr[1];
                                                                     } else if (tagStr.length == 2 && tagStr[0] == 'licensetype') {
                                                                         licenseId = tagStr[1];
-                                                                    } else if (tagStr.length == 2 && tagStr[0] == 'filetypeid') {
-                                                                    	filetypeId = tagStr[1];
+                                                                    } else if (tagStr.length == 2 && tagStr[0] == 'packagetypeid') {
+                                                                    	packagetypeId = tagStr[1];
                                                                     }
                                                                 } else {
                                                                 	var tagStr = this.split('##');
@@ -549,8 +549,8 @@ $helperImage = new Default_View_Helper_Image();
                                                                     } else if (tagStr.length == 2 && tagStr[0] == 'license') {
                                                                         license = tagStr[1];
                                                                         license = Base64.decode(license);
-                                                                    } else if (tagStr.length == 2 && tagStr[0] == 'filetypeid') {
-                                                                    	filetypeId = tagStr[1];
+                                                                    } else if (tagStr.length == 2 && tagStr[0] == 'packagetypeid') {
+                                                                    	packagetypeId = tagStr[1];
                                                                     }
                                                                 }
                                                             });
@@ -579,7 +579,7 @@ $helperImage = new Default_View_Helper_Image();
                                                             + '</td>'
                                                             + '<td>' + this.type + '</td>'
                                                             + '<td>'
-                                                            + '<select id="data-select-filetype' + this.id + '" data-filetype-id=" name="filetype" class="form-control input-sm" style="width: 200px;">'
+                                                            + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id=" name="packagetype" class="form-control input-sm" style="width: 200px;">'
                                                             + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
                                                             + '</select>'
                                                             + '</td>'
@@ -590,7 +590,7 @@ $helperImage = new Default_View_Helper_Image();
                                                         );
 
                                                         $("#data-select-license" + this.id + " option[value='"+licenseId+"']").attr('selected', 'selected');
-                                                        $("#data-select-filetype" + this.id + " option[value='"+filetypeId+"']").attr('selected', 'selected');
+                                                        $("#data-select-packagetype" + this.id + " option[value='"+packagetypeId+"']").attr('selected', 'selected');
 
                                                         $licenseSelect = $modalPpload.find('#data-select-license' + this.id);
 
@@ -627,36 +627,36 @@ $helperImage = new Default_View_Helper_Image();
                                                         });
 
 
-                                                        $filetypeSelect = $modalPpload.find('#data-select-filetype' + this.id);
+                                                        $packagetypeSelect = $modalPpload.find('#data-select-packagetype' + this.id);
 
-														if(this.active == '0') {
-															$filetypeSelect.prop('disabled', 'disabled');
-														}
+                                                        if(this.active == '0') {
+                                                                $packagetypeSelect.prop('disabled', 'disabled');
+                                                        }
 
-                                                        $filetypeSelect.on('change', function (event) {
+                                                        $packagetypeSelect.on('change', function (event) {
                                                             event.preventDefault();
                                                             $fileId = $(this).closest('tr[data-ppload-file-id]').attr('data-ppload-file-id');
                                                             $fileTags = $(this).closest('tr[data-ppload-file-tags]').attr('data-ppload-file-tags');
-                                                            $filetypeId = $modalPpload.find('#data-select-filetype' + $fileId).val();
-                                                            updateFileType($fileId, $filetypeId);
+                                                            $packagetypeId = $modalPpload.find('#data-select-packagetype' + $fileId).val();
+                                                            updatePackageType($fileId, $packagetypeId);
 
                                                             newFileTags = '';
                                                             if ($fileTags) {
                                                                 $.each($fileTags.split(','), function () {
                                                                 	if(this.indexOf("##")==-1) {
                                                                     	var tagStr = this.split('-');
-                                                                        if (tagStr.length == 2 && tagStr[0] != 'filetypeid') {
+                                                                        if (tagStr.length == 2 && tagStr[0] != 'packagetypeid') {
                                                                         	newFileTags += ',' + this;
                                                                         }
                                                                     } else {
                                                                     	var tagStr = this.split('##');
-                                                                        if (tagStr.length == 2 && tagStr[0] != 'filetypeid') {
+                                                                        if (tagStr.length == 2 && tagStr[0] != 'packagetypeid') {
                                                                         	newFileTags += ',' + this;
                                                                         }
                                                                     }
                                                                 });
                                                             }
-                                                            newFileTags += ',filetypeid-'+$filetypeId;
+                                                            newFileTags += ',packagetypeid-'+$packagetypeId;
                                                             updatePploadFileTags($fileId, newFileTags);
                                                             $(this).closest('tr[data-ppload-file-tags]').attr('data-ppload-file-tags',newFileTags);
                                                         });
@@ -821,7 +821,7 @@ $helperImage = new Default_View_Helper_Image();
                                                         + '</td>'
                                                         + '<td>' + data.file.type + '</td>'
                                                         + '<td>'
-                                                        + '<select id="data-select-filetype' + data.file.id + '" data-filetype-id=" name="filetype" class="form-control input-sm" style="width: 200px;">'
+                                                        + '<select id="data-select-packagetype' + data.file.id + '" data-packagetype-id=" name="packagetype" class="form-control input-sm" style="width: 200px;">'
                                                         + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
                                                         + '</select>'
                                                         + '</td>'
@@ -859,31 +859,31 @@ $helperImage = new Default_View_Helper_Image();
                                                         $(this).closest('tr[data-ppload-file-tags]').attr('data-ppload-file-tags',newFileTags);
                                                     });
 
-                                                    $filetypeSelect = $modalPpload.find('#data-select-filetype' + data.file.id);
-                                                    $filetypeSelect.on('change', function (event) {
+                                                    $packagetypeSelect = $modalPpload.find('#data-select-packagetype' + data.file.id);
+                                                    $packagetypeSelect.on('change', function (event) {
                                                         event.preventDefault();
                                                         $fileId = $(this).closest('tr[data-ppload-file-id]').attr('data-ppload-file-id');
-                                                        $filetypeId = $modalPpload.find('#data-select-filetype' + $fileId).val();
+                                                        $packagetypeId = $modalPpload.find('#data-select-packagetype' + $fileId).val();
                                                         $fileTags = $(this).closest('tr[data-ppload-file-tags]').attr('data-ppload-file-tags');
-                                                        updateFileType($fileId, $filetypeId);
+                                                        updatePackageType($fileId, $packagetypeId);
 
                                                         newFileTags = '';
                                                         if ($fileTags) {
                                                             $.each($fileTags.split(','), function () {
                                                             	if(this.indexOf("##")==-1) {
                                                                 	var tagStr = this.split('-');
-                                                                    if (tagStr.length == 2 && tagStr[0] != 'filetypeid') {
+                                                                    if (tagStr.length == 2 && tagStr[0] != 'packagetypeid') {
                                                                     	newFileTags += ',' + this;
                                                                     }
                                                                 } else {
                                                                 	var tagStr = this.split('##');
-                                                                    if (tagStr.length == 2 && tagStr[0] != 'filetypeid') {
+                                                                    if (tagStr.length == 2 && tagStr[0] != 'packagetypeid') {
                                                                     	newFileTags += ',' + this;
                                                                     }
                                                                 }
                                                             });
                                                         }
-                                                        newFileTags += ',filetypeid-'+$filetypeId;
+                                                        newFileTags += ',packagetypeid-'+$packagetypeId;
                                                         updatePploadFileTags($fileId, newFileTags);
                                                         $(this).closest('tr[data-ppload-file-tags]').attr('data-ppload-file-tags',newFileTags);
                                                     });
@@ -926,10 +926,10 @@ $helperImage = new Default_View_Helper_Image();
                                             });
                                         }
 
-                                        function updateFileType(fileId, filetypeId) {
-                                            var $url = ($modalPpload.attr('data-updatefiletype-uri')).replace(/{project_id}/i, ProductForm.project_id);
+                                        function updatePackageType(fileId, packagetypeId) {
+                                            var $url = ($modalPpload.attr('data-updatepackagetype-uri')).replace(/{project_id}/i, ProductForm.project_id);
                                             if (typeof ProductForm.project_id == 'undefined' || ProductForm.project_id == '' || ProductForm.project_id == '0') {
-                                                $url = ($modalPpload.attr('data-updatefiletype-uri')).replace(/{project_id}/i, <?= (isset($this->project_id))?$this->project_id:0  ?>);
+                                                $url = ($modalPpload.attr('data-updatepackagetype-uri')).replace(/{project_id}/i, <?= (isset($this->project_id))?$this->project_id:0  ?>);
                                             }
 
                                             $.ajax({
@@ -937,7 +937,7 @@ $helperImage = new Default_View_Helper_Image();
                                                 type: 'POST',
                                                 data: {
                                                     file_id: fileId,
-                                                    file_type_id: filetypeId
+                                                    package_type_id: packagetypeId
                                                 },
                                                 dataType: 'json',
                                                 success: function (data, textStatus, jqXHR) {
