--- a/application/modules/default/views/scripts/product/partials/details.phtml
+++ b/application/modules/default/views/scripts/product/partials/details.phtml
@@ -69,10 +69,10 @@
                                       </span>
                                       <span class="col-lg-7 value ">
                                       <?php 
-                                            $type = $this->FetchProjectFileTypes($this->product->project_id);                                          
+                                            $type = $this->FetchProjectPackageTypes($this->product->project_id);                                          
                                       if(!empty($type)){
                                         ?>
-                                      <?= $this->FetchProjectFileTypes($this->product->project_id) ?>
+                                      <?= $this->FetchProjectPackageTypes($this->product->project_id) ?>
                                       <?php 
                                       }?>
                                       </span>
