--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -223,7 +223,7 @@
                                      }
                                      var licenseId = '';
                                      var license = '';
-                                     var filetypeId = '';
+                                     var packagetypeId = '';
                                      if (this.tags) {
                                          fileTags = this.tags;
 
@@ -235,8 +235,8 @@
                                                   osId = tagStr[1];
                                               } else if (tagStr.length == 2 && tagStr[0] == 'licensetype') {
                                                   licenseId = tagStr[1];
-                                              } else if (tagStr.length == 2 && tagStr[0] == 'filetypeid') {
-                                                  filetypeId = tagStr[1];
+                                              } else if (tagStr.length == 2 && tagStr[0] == 'packagetypeid') {
+                                                  packagetypeId = tagStr[1];
                                               }
                                              } else {
                                               var tagStr = this.split('##');
@@ -245,8 +245,8 @@
                                               } else if (tagStr.length == 2 && tagStr[0] == 'license') {
                                                   license = tagStr[1];
                                                   license = Base64.decode(license);
-                                              } else if (tagStr.length == 2 && tagStr[0] == 'filetypeid') {
-                                                  filetypeId = tagStr[1];
+                                              } else if (tagStr.length == 2 && tagStr[0] == 'packagetypeid') {
+                                                  packagetypeId = tagStr[1];
                                               }
                                              }
                                              /*else if (tagStr.length == 2 && tagStr[0] == 'package') {
@@ -300,9 +300,9 @@
 	                                         + '<td>' + fileDescription + '</td>'
 	                                         + '<td>' + this.type + '</td>'
                                                  + '<td>'
-                                                 + '<select id="data-select-filetype' + this.id + '" data-filetype-id=" name="filetype" class="form-control input-sm" style="width: 200px;">'
+                                                 + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id=" name="packagetype" class="form-control input-sm" style="width: 200px;">'
                                                  + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
-                                                 + '</select><span id="file-tag-filetype'+this.id+'">'
+                                                 + '</select><span id="file-tag-packagetype'+this.id+'">'
                                                  + '</td>'   
 	                                         + '<td>'
 	                                         + '<select id="data-select-license' + this.id + '" data-license-id=" name="license">'
@@ -339,16 +339,16 @@
 
 	                                     $("#data-select-license" + this.id).hide();
                                              
-                                             if ((typeof filetypeId != 'undefined') && (filetypeId != "")) {
-	                                         $("#data-select-filetype" + this.id + " option[value='" + filetypeId + "']").attr('selected', 'selected');
-	                                         $filetypeIdText = $("#data-select-filetype" + this.id + " option[value='" + filetypeId + "']").text();
-	                                         $("#data-select-filetype" + this.id).hide();
-	                                         $("#file-tag-filetype" + this.id).text($filetypeIdText);
+                                             if ((typeof packagetypeId != 'undefined') && (packagetypeId != "")) {
+	                                         $("#data-select-packagetype" + this.id + " option[value='" + packagetypeId + "']").attr('selected', 'selected');
+	                                         $packagetypeIdText = $("#data-select-packagetype" + this.id + " option[value='" + packagetypeId + "']").text();
+	                                         $("#data-select-packagetype" + this.id).hide();
+	                                         $("#file-tag-packagetype" + this.id).text($packagetypeIdText);
 	                                     } else {
-	                                      $("#data-select-filetype" + this.id).hide();
+	                                      $("#data-select-packagetype" + this.id).hide();
 	                                     }
 
-	                                     $("#data-select-filetype" + this.id).hide();
+	                                     $("#data-select-packagetype" + this.id).hide();
 
 
 	                                     if (isExternLink) {
@@ -406,8 +406,8 @@
                                                   osId = tagStr[1];
                                               } else if (tagStr.length == 2 && tagStr[0] == 'licensetype') {
                                                   licenseId = tagStr[1];
-                                              } else if (tagStr.length == 2 && tagStr[0] == 'filetypeid') {
-                                                  filetypeId = tagStr[1];
+                                              } else if (tagStr.length == 2 && tagStr[0] == 'packagetypeid') {
+                                                  packagetypeId = tagStr[1];
                                               }
                                              } else {
                                               var tagStr = this.split('##');
@@ -416,8 +416,8 @@
                                               } else if (tagStr.length == 2 && tagStr[0] == 'license') {
                                                   license = tagStr[1];
                                                   license = Base64.decode(license);
-                                              } else if (tagStr.length == 2 && tagStr[0] == 'filetypeid') {
-                                                  filetypeId = tagStr[1];
+                                              } else if (tagStr.length == 2 && tagStr[0] == 'packagetypeid') {
+                                                  packagetypeId = tagStr[1];
                                               }
                                              }
                                              /*else if (tagStr.length == 2 && tagStr[0] == 'package') {
@@ -448,9 +448,9 @@
 	                                         + '<td>' + fileDescription + '</td>'
 	                                         + '<td>' + this.type + '</td>'
                                                  + '<td>'
-                                                 + '<select id="data-select-filetype' + this.id + '" data-filetype-id=" name="filetype" class="form-control input-sm" style="width: 200px;">'
+                                                 + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id=" name="packagetype" class="form-control input-sm" style="width: 200px;">'
                                                  + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
-                                                 + '</select><span id="file-tag-filetype'+this.id+'">'
+                                                 + '</select><span id="file-tag-packagetype'+this.id+'">'
                                                  + '</td>'
 	                                         + '<td>'
 	                                         + '<select id="data-select-license' + this.id + '" data-license-id=" name="license">'
@@ -487,16 +487,16 @@
 	                                         $("#file-tag-license-text" + this.id).text(license);
 	                                     }
                                              
-                                             if ((typeof filetypeId != 'undefined') && (filetypeId != "")) {
-	                                         $("#data-select-filetype" + this.id + " option[value='" + filetypeId + "']").attr('selected', 'selected');
-	                                         $filetypeIdText = $("#data-select-filetype" + this.id + " option[value='" + filetypeId + "']").text();
-	                                         $("#data-select-filetype" + this.id).hide();
-	                                         $("#file-tag-filetype" + this.id).text($filetypeIdText);
+                                             if ((typeof packagetypeId != 'undefined') && (packagetypeId != "")) {
+	                                         $("#data-select-packagetype" + this.id + " option[value='" + packagetypeId + "']").attr('selected', 'selected');
+	                                         $packagetypeIdText = $("#data-select-packagetype" + this.id + " option[value='" + packagetypeId + "']").text();
+	                                         $("#data-select-packagetype" + this.id).hide();
+	                                         $("#file-tag-packagetype" + this.id).text($packagetypeIdText);
 	                                     } else {
-	                                      $("#data-select-filetype" + this.id).hide();
+	                                      $("#data-select-packagetype" + this.id).hide();
 	                                     }
 
-	                                     $("#data-select-filetype" + this.id).hide();
+	                                     $("#data-select-packagetype" + this.id).hide();
 
 	                                     if (isExternLink) {
 	                                         $("#data-link" + this.id).attr('href', decodeURIComponent(link));
