--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -121,7 +121,7 @@ $this->inlineScript()->appendScript(
      data-product-tile=""
      data-addpploadfile-uri=""
      data-updatepploadfile-uri=""
-     data-updatefiletype-uri=""
+     data-updatepackagetype-uri=""
      data-deletepploadfile-uri=""
      data-deletepploadfiles-uri=""
      data-finalizepploadcollection-uri="">
@@ -399,7 +399,7 @@ $this->inlineScript()->appendScript(
                         var osId = '';
                         var licenseId = '';
                         var license = '';
-                        var filetypeId = '';
+                        var packagetypeId = '';
                         //var packageId = null;
                         //var archId = null;
                         //var deviceId = null;
@@ -412,8 +412,8 @@ $this->inlineScript()->appendScript(
                                         osId = tagStr[1];
                                     } else if (tagStr.length == 2 && tagStr[0] == 'licensetype') {
                                         licenseId = tagStr[1];
-                                    } else if (tagStr.length == 2 && tagStr[0] == 'filetypeid') {
-                                    	filetypeId = tagStr[1];
+                                    } else if (tagStr.length == 2 && tagStr[0] == 'packagetypeid') {
+                                    	packagetypeId = tagStr[1];
                                     }
                                 } else {
                                 	var tagStr = this.split('##');
@@ -422,8 +422,8 @@ $this->inlineScript()->appendScript(
                                     } else if (tagStr.length == 2 && tagStr[0] == 'license') {
                                         license = tagStr[1];
                                         license = Base64.decode(license);
-                                    } else if (tagStr.length == 2 && tagStr[0] == 'filetypeid') {
-                                    	filetypeId = tagStr[1];
+                                    } else if (tagStr.length == 2 && tagStr[0] == 'packagetypeid') {
+                                    	packagetypeId = tagStr[1];
                                     }
                                 }
                                 /*else if (tagStr.length == 2 && tagStr[0] == 'package') {
@@ -461,7 +461,7 @@ $this->inlineScript()->appendScript(
                             + '</td>'
                             + '<td>' + this.type + '</td>'
                             + '<td>'
-                            + '<select id="data-select-filetype' + this.id + '" data-filetype-id=" name="filetype" class="form-control input-sm" style="width: 200px;">'
+                            + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id=" name="packagetype" class="form-control input-sm" style="width: 200px;">'
                             + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
                             + '</select>'
                             + '</td>'
@@ -474,7 +474,7 @@ $this->inlineScript()->appendScript(
                         );
 
                         $("#data-select-license" + this.id + " option[value='"+licenseId+"']").attr('selected', 'selected');
-                        $("#data-select-filetype" + this.id + " option[value='"+filetypeId+"']").attr('selected', 'selected');
+                        $("#data-select-packagetype" + this.id + " option[value='"+packagetypeId+"']").attr('selected', 'selected');
 
                         $licenseSelect = $modalPpload.find('#data-select-license' + this.id);
 
@@ -511,36 +511,36 @@ $this->inlineScript()->appendScript(
                         });
 
 
-                        $filetypeSelect = $modalPpload.find('#data-select-filetype' + this.id);
+                        $packagetypeSelect = $modalPpload.find('#data-select-packagetype' + this.id);
 
 						if(this.active == '0') {
-							$filetypeSelect.prop('disabled', 'disabled');
+							$packagetypeSelect.prop('disabled', 'disabled');
 						}
 
-                        $filetypeSelect.on('change', function (event) {
+                        $packagetypeSelect.on('change', function (event) {
                             event.preventDefault();
                             $fileId = $(this).closest('tr[data-ppload-file-id]').attr('data-ppload-file-id');
                             $fileTags = $(this).closest('tr[data-ppload-file-tags]').attr('data-ppload-file-tags');
-                            $filetypeId = $modalPpload.find('#data-select-filetype' + $fileId).val();
-                            updateFileType($fileId, $filetypeId);
+                            $packagetypeId = $modalPpload.find('#data-select-packagetype' + $fileId).val();
+                            updatePackageType($fileId, $packagetypeId);
 
                             newFileTags = '';
                             if ($fileTags) {
                                 $.each($fileTags.split(','), function () {
                                 	if(this.indexOf("##")==-1) {
                                     	var tagStr = this.split('-');
-                                        if (tagStr.length == 2 && tagStr[0] != 'filetypeid') {
+                                        if (tagStr.length == 2 && tagStr[0] != 'packagetypeid') {
                                         	newFileTags += ',' + this;
                                         }
                                     } else {
                                     	var tagStr = this.split('##');
-                                        if (tagStr.length == 2 && tagStr[0] != 'filetypeid') {
+                                        if (tagStr.length == 2 && tagStr[0] != 'packagetypeid') {
                                         	newFileTags += ',' + this;
                                         }
                                     }
                                 });
                             }
-                            newFileTags += ',filetypeid-'+$filetypeId;
+                            newFileTags += ',packagetypeid-'+$packagetypeId;
                             updatePploadFileTags($fileId, newFileTags);
                             $(this).closest('tr[data-ppload-file-tags]').attr('data-ppload-file-tags',newFileTags);
                         });
@@ -750,7 +750,7 @@ $this->inlineScript()->appendScript(
                         + '</td>'
                         + '<td>' + data.file.type + '</td>'
                         + '<td>'
-                        + '<select id="data-select-filetype' + data.file.id + '" data-filetype-id=" name="filetype" class="form-control input-sm" style="width: 200px;">'
+                        + '<select id="data-select-packagetype' + data.file.id + '" data-packagetype-id=" name="packagetype" class="form-control input-sm" style="width: 200px;">'
                         + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
                         + '</select>'
                         + '</td>'
@@ -789,31 +789,31 @@ $this->inlineScript()->appendScript(
                         $(this).closest('tr[data-ppload-file-tags]').attr('data-ppload-file-tags',newFileTags);
                     });
 
-                    $filetypeSelect = $modalPpload.find('#data-select-filetype' + data.file.id);
-                    $filetypeSelect.on('change', function (event) {
+                    $packagetypeSelect = $modalPpload.find('#data-select-packagetype' + data.file.id);
+                    $packagetypeSelect.on('change', function (event) {
                         event.preventDefault();
                         $fileId = $(this).closest('tr[data-ppload-file-id]').attr('data-ppload-file-id');
-                        $filetypeId = $modalPpload.find('#data-select-filetype' + $fileId).val();
+                        $packagetypeId = $modalPpload.find('#data-select-packagetype' + $fileId).val();
                         $fileTags = $(this).closest('tr[data-ppload-file-tags]').attr('data-ppload-file-tags');
-                        updateFileType($fileId, $filetypeId);
+                        updatePackageType($fileId, $packagetypeId);
 
                         newFileTags = '';
                         if ($fileTags) {
                             $.each($fileTags.split(','), function () {
                             	if(this.indexOf("##")==-1) {
                                 	var tagStr = this.split('-');
-                                    if (tagStr.length == 2 && tagStr[0] != 'filetypeid') {
+                                    if (tagStr.length == 2 && tagStr[0] != 'packagetypeid') {
                                     	newFileTags += ',' + this;
                                     }
                                 } else {
                                 	var tagStr = this.split('##');
-                                    if (tagStr.length == 2 && tagStr[0] != 'filetypeid') {
+                                    if (tagStr.length == 2 && tagStr[0] != 'packagetypeid') {
                                     	newFileTags += ',' + this;
                                     }
                                 }
                             });
                         }
-                        newFileTags += ',filetypeid-'+$filetypeId;
+                        newFileTags += ',packagetypeid-'+$packagetypeId;
                         updatePploadFileTags($fileId, newFileTags);
                         $(this).closest('tr[data-ppload-file-tags]').attr('data-ppload-file-tags',newFileTags);
                     });
@@ -854,13 +854,13 @@ $this->inlineScript()->appendScript(
             });
         }
 
-        function updateFileType(fileId, filetypeId) {
+        function updatePackageType(fileId, packagetypeId) {
             $.ajax({
-                url: $modalPpload.attr('data-updatefiletype-uri'),
+                url: $modalPpload.attr('data-updatepackagetype-uri'),
                 type: 'POST',
                 data: {
                     file_id: fileId,
-                    file_type_id: filetypeId
+                    package_type_id: packagetypeId
                 },
                 dataType: 'json',
                 success: function (data, textStatus, jqXHR) {
@@ -1050,7 +1050,7 @@ $this->inlineScript()->appendScript(
             $modalPpload.attr('data-product-version', $(this).attr('data-product-version'));
             $modalPpload.attr('data-addpploadfile-uri', $(this).attr('data-addpploadfile-uri'));
             $modalPpload.attr('data-updatepploadfile-uri', $(this).attr('data-updatepploadfile-uri'));
-            $modalPpload.attr('data-updatefiletype-uri', $(this).attr('data-updatefiletype-uri'));
+            $modalPpload.attr('data-updatepackagetype-uri', $(this).attr('data-updatepackagetype-uri'));
             $modalPpload.attr('data-deletepploadfile-uri', $(this).attr('data-deletepploadfile-uri'));
             $modalPpload.attr('data-deletepploadfiles-uri', $(this).attr('data-deletepploadfiles-uri'));
             $modalPpload.attr('data-finalizepploadcollection-uri', $(this).attr('data-finalizepploadcollection-uri'));
