--- a/httpdocs/theme/flatui/css/style.css
+++ b/httpdocs/theme/flatui/css/style.css
@@ -987,11 +987,11 @@ iframe[id^="oauth2relay"] { position: fixed !important; }
     font-size: 50px;
   }
 
-div.explore-product-details span.filetypeos
+div.explore-product-details span.packagetypeos
 {
   
 }
-span.filetypeos
+span.packagetypeos
 {
   background-color: #5bc0de;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
