--- a/httpdocs/theme/flatui/css/style.css
+++ b/httpdocs/theme/flatui/css/style.css
@@ -616,7 +616,7 @@ a.partial{
 
 .dropdown:hover .dropdown-menu {
     display: block;
-    margin-top: 0; // remove the gap so it doesn't close
+    margin-top: 0; /*remove the gap so it doesn't close*/
  }
  .metamenu a{
             color:#6a7686;
