--- a/application/modules/default/views/scripts/explore/partials/comment.phtml
+++ b/application/modules/default/views/scripts/explore/partials/comment.phtml
@@ -19,24 +19,17 @@
  *    You should have received a copy of the GNU Affero General Public License
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
-
-$helperPrintDate = new Default_View_Helper_PrintDate();
-$updateTime = $helperPrintDate->printDate($this->comment['comment_created_at']);
-$helperBuildProductUrl = new Default_View_Helper_BuildProductUrl();
-$helperFetchSubcategoriesForProduct = new Default_View_Helper_FetchCategoriesForProductAsString();
-$helperImage = new Default_View_Helper_Image();
-$helperTruncate = new Default_View_Helper_Truncate();
 ?>
 <div class="commentstore">
 	<div class="row" style="margin-left: 0;margin-right: 0; ">
 		<?= $this->comment['title'] ?>
 		<span
-			style="display: block;" class="small"><?php echo $helperFetchSubcategoriesForProduct->fetchCategoriesForProductAsString($this->comment['project_id']) ?></span>
+			style="display: block;" class="small"><?php echo $this->fetchCategoriesForProductAsString($this->comment['project_id']) ?></span>
 	</div>
 	<div class="row" style="margin-left: 0;margin-right: 0;">
 		<div class="userinfo">
 			<a href="/member/<?php echo $this->comment['member_id'] ?>"><img
-					src="<?= $helperImage->Image($this->comment['profile_image_url'],
+					src="<?= $this->Image($this->comment['profile_image_url'],
 						array('width' => 40, 'height' => 40)) ?>"/>
 				<span style="display: block"><?= $this->comment['username'] ?></span>
 			</a>
@@ -44,12 +37,12 @@ $helperTruncate = new Default_View_Helper_Truncate();
 		<div class="info">
 			<div class="small" style="line-height:1.3"><a
 					href="/p/<?= $this->comment['project_id'] ?>">
-						<?=$helperTruncate->truncate($this->comment['comment_text'], 200, '...', false, true)?>
+						<?=$this->truncate(strip_tags($this->comment['comment_text'],' '), 200, '...', false, true)?>						
 					</a>
 			</div>
 		</div>
 	</div>
 	<div class="row " style="margin-left: 0;margin-right: 0;">
-		<span style="font-size: smaller;"><?= $updateTime ?> </span>
+		<span style="font-size: smaller;"><?= $this->printDate($this->comment['comment_created_at'])?> </span>
 	</div>
 </div>
