front end for user to add more email addresses

--- a/application/modules/default/views/scripts/settings/index.phtml
+++ b/application/modules/default/views/scripts/settings/index.phtml
@@ -83,6 +83,11 @@ $this->tab = 'settings';
                                 <?php echo $this->render('settings/partials/profile.phtml'); ?>
                             </section>
                             <!-- /edit profile -->
+                            <!-- edit profile -->
+                            <section class="panel panel-default" id="form-emails">
+                                <?php echo $this->render('settings/partials/email.phtml'); ?>
+                            </section>
+                            <!-- /edit profile -->
                             <!-- edit payments -->
                             <section class="panel panel-default" id="form-payment">
                                 <?php echo $this->render('settings/partials/payment.phtml'); ?>
