front end for user to add more email addresses

--- a/application/modules/default/views/layout/flat_ui_template.phtml
+++ b/application/modules/default/views/layout/flat_ui_template.phtml
@@ -71,7 +71,7 @@
     <div class="modal-body"></div>
     <div id="error"></div>
 </div>
-
+<?php echo $this->render('partials/genericModalConfirmation.phtml'); ?>
 
 <!-- Load JS here for greater good =============================-->
 
