--- a/application/modules/default/views/scripts/settings/index.phtml
+++ b/application/modules/default/views/scripts/settings/index.phtml
@@ -84,7 +84,7 @@ $this->tab = 'settings';
                             </section>
                             <!-- /edit profile -->
                             <!-- edit profile -->
-                            <section class="panel panel-default" id="form-emails">
+                            <section class="panel panel-default" id="form-email">
                                 <?php echo $this->render('settings/partials/email.phtml'); ?>
                             </section>
                             <!-- /edit profile -->
